parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> return_instruction
Rule 5     instruction -> break_instruction
Rule 6     instruction -> continue_instruction
Rule 7     instruction -> print_instruction
Rule 8     instruction -> while_instruction
Rule 9     instruction -> for_instruction
Rule 10    instruction -> if_instruction
Rule 11    instruction -> assignment_instruction
Rule 12    instruction -> compound_assignment_instruction
Rule 13    instruction -> compound_instruction
Rule 14    return_instruction -> RETURN expression ;
Rule 15    break_instruction -> BREAK ;
Rule 16    continue_instruction -> CONTINUE ;
Rule 17    print_instruction -> PRINT expression_list ;
Rule 18    print_instruction -> PRINT " expression_list " ;
Rule 19    assignment_instruction -> variable_expression = expression ;
Rule 20    assignment_instruction -> variable_expression = [ expression_lists ] ;
Rule 21    expression -> expression + expression
Rule 22    expression -> expression - expression
Rule 23    expression -> expression * expression
Rule 24    expression -> expression / expression
Rule 25    expression -> expression EQ expression
Rule 26    expression -> expression NOTEQ expression
Rule 27    expression -> expression LESS expression
Rule 28    expression -> expression GREATER expression
Rule 29    expression -> expression LESSEQ expression
Rule 30    expression -> expression GREATEREQ expression
Rule 31    expression -> expression DOTADD expression
Rule 32    expression -> expression DOTSUB expression
Rule 33    expression -> expression DOTMUL expression
Rule 34    expression -> expression DOTDIV expression
Rule 35    expression -> - expression
Rule 36    expression -> expression '
Rule 37    expression -> ZEROS ( expression )
Rule 38    expression -> ONES ( expression )
Rule 39    expression -> EYE ( expression )
Rule 40    compound_assignment_instruction -> variable_expression ADDASSIGN expression ;
Rule 41    compound_assignment_instruction -> variable_expression SUBASSIGN expression ;
Rule 42    compound_assignment_instruction -> variable_expression MULASSIGN expression ;
Rule 43    compound_assignment_instruction -> variable_expression DIVASSIGN expression ;
Rule 44    if_instruction -> IF ( condition ) instruction
Rule 45    if_instruction -> IF ( condition ) instruction ELSE instruction
Rule 46    while_instruction -> WHILE ( condition ) instruction
Rule 47    for_instruction -> FOR variable_expression = expression : expression instruction
Rule 48    compound_instruction -> { instructions }
Rule 49    condition -> expression
Rule 50    expression -> FLOATNUM
Rule 51    expression -> INTNUM
Rule 52    expression -> STRING
Rule 53    expression -> variable_expression
Rule 54    variable_expression -> ID
Rule 55    variable_expression -> ID [ expression , expression ]
Rule 56    expression -> ( expression )
Rule 57    expression_lists -> expression_lists ; expression_list
Rule 58    expression_lists -> expression_list
Rule 59    expression_list -> expression_list , expression
Rule 60    expression_list -> expression

Terminals, with rules where they appear

"                    : 18 18
'                    : 36
(                    : 37 38 39 44 45 46 56
)                    : 37 38 39 44 45 46 56
*                    : 23
+                    : 21
,                    : 55 59
-                    : 22 35
/                    : 24
:                    : 47
;                    : 14 15 16 17 18 19 20 40 41 42 43 57
=                    : 19 20 47
ADDASSIGN            : 40
BREAK                : 15
CONTINUE             : 16
DIVASSIGN            : 43
DOTADD               : 31
DOTDIV               : 34
DOTMUL               : 33
DOTSUB               : 32
ELSE                 : 45
EQ                   : 25
EYE                  : 39
FLOATNUM             : 50
FOR                  : 47
GREATER              : 28
GREATEREQ            : 30
ID                   : 54 55
IF                   : 44 45
INTNUM               : 51
LESS                 : 27
LESSEQ               : 29
MULASSIGN            : 42
NOTEQ                : 26
ONES                 : 38
PRINT                : 17 18
RETURN               : 14
STRING               : 52
SUBASSIGN            : 41
WHILE                : 46
ZEROS                : 37
[                    : 20 55
]                    : 20 55
error                : 
{                    : 48
}                    : 48

Nonterminals, with rules where they appear

assignment_instruction : 11
break_instruction    : 5
compound_assignment_instruction : 12
compound_instruction : 13
condition            : 44 45 46
continue_instruction : 6
expression           : 14 19 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36 37 38 39 40 41 42 43 47 47 49 55 55 56 59 60
expression_list      : 17 18 57 58 59
expression_lists     : 20 57
for_instruction      : 9
if_instruction       : 10
instruction          : 2 3 44 45 45 46 47
instructions         : 1 2 48
print_instruction    : 7
program              : 0
return_instruction   : 4
variable_expression  : 19 20 40 41 42 43 47 53
while_instruction    : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . return_instruction
    (5) instruction -> . break_instruction
    (6) instruction -> . continue_instruction
    (7) instruction -> . print_instruction
    (8) instruction -> . while_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . if_instruction
    (11) instruction -> . assignment_instruction
    (12) instruction -> . compound_assignment_instruction
    (13) instruction -> . compound_instruction
    (14) return_instruction -> . RETURN expression ;
    (15) break_instruction -> . BREAK ;
    (16) continue_instruction -> . CONTINUE ;
    (17) print_instruction -> . PRINT expression_list ;
    (18) print_instruction -> . PRINT " expression_list " ;
    (46) while_instruction -> . WHILE ( condition ) instruction
    (47) for_instruction -> . FOR variable_expression = expression : expression instruction
    (44) if_instruction -> . IF ( condition ) instruction
    (45) if_instruction -> . IF ( condition ) instruction ELSE instruction
    (19) assignment_instruction -> . variable_expression = expression ;
    (20) assignment_instruction -> . variable_expression = [ expression_lists ] ;
    (40) compound_assignment_instruction -> . variable_expression ADDASSIGN expression ;
    (41) compound_assignment_instruction -> . variable_expression SUBASSIGN expression ;
    (42) compound_assignment_instruction -> . variable_expression MULASSIGN expression ;
    (43) compound_assignment_instruction -> . variable_expression DIVASSIGN expression ;
    (48) compound_instruction -> . { instructions }
    (54) variable_expression -> . ID
    (55) variable_expression -> . ID [ expression , expression ]

    RETURN          shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    IF              shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    return_instruction             shift and go to state 4
    break_instruction              shift and go to state 5
    continue_instruction           shift and go to state 6
    print_instruction              shift and go to state 7
    while_instruction              shift and go to state 8
    for_instruction                shift and go to state 9
    if_instruction                 shift and go to state 10
    assignment_instruction         shift and go to state 11
    compound_assignment_instruction shift and go to state 12
    compound_instruction           shift and go to state 13
    variable_expression            shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . return_instruction
    (5) instruction -> . break_instruction
    (6) instruction -> . continue_instruction
    (7) instruction -> . print_instruction
    (8) instruction -> . while_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . if_instruction
    (11) instruction -> . assignment_instruction
    (12) instruction -> . compound_assignment_instruction
    (13) instruction -> . compound_instruction
    (14) return_instruction -> . RETURN expression ;
    (15) break_instruction -> . BREAK ;
    (16) continue_instruction -> . CONTINUE ;
    (17) print_instruction -> . PRINT expression_list ;
    (18) print_instruction -> . PRINT " expression_list " ;
    (46) while_instruction -> . WHILE ( condition ) instruction
    (47) for_instruction -> . FOR variable_expression = expression : expression instruction
    (44) if_instruction -> . IF ( condition ) instruction
    (45) if_instruction -> . IF ( condition ) instruction ELSE instruction
    (19) assignment_instruction -> . variable_expression = expression ;
    (20) assignment_instruction -> . variable_expression = [ expression_lists ] ;
    (40) compound_assignment_instruction -> . variable_expression ADDASSIGN expression ;
    (41) compound_assignment_instruction -> . variable_expression SUBASSIGN expression ;
    (42) compound_assignment_instruction -> . variable_expression MULASSIGN expression ;
    (43) compound_assignment_instruction -> . variable_expression DIVASSIGN expression ;
    (48) compound_instruction -> . { instructions }
    (54) variable_expression -> . ID
    (55) variable_expression -> . ID [ expression , expression ]

    $end            reduce using rule 1 (program -> instructions .)
    RETURN          shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    IF              shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    instruction                    shift and go to state 24
    return_instruction             shift and go to state 4
    break_instruction              shift and go to state 5
    continue_instruction           shift and go to state 6
    print_instruction              shift and go to state 7
    while_instruction              shift and go to state 8
    for_instruction                shift and go to state 9
    if_instruction                 shift and go to state 10
    assignment_instruction         shift and go to state 11
    compound_assignment_instruction shift and go to state 12
    compound_instruction           shift and go to state 13
    variable_expression            shift and go to state 20

state 3

    (3) instructions -> instruction .

    RETURN          reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    {               reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> return_instruction .

    RETURN          reduce using rule 4 (instruction -> return_instruction .)
    BREAK           reduce using rule 4 (instruction -> return_instruction .)
    CONTINUE        reduce using rule 4 (instruction -> return_instruction .)
    PRINT           reduce using rule 4 (instruction -> return_instruction .)
    WHILE           reduce using rule 4 (instruction -> return_instruction .)
    FOR             reduce using rule 4 (instruction -> return_instruction .)
    IF              reduce using rule 4 (instruction -> return_instruction .)
    {               reduce using rule 4 (instruction -> return_instruction .)
    ID              reduce using rule 4 (instruction -> return_instruction .)
    $end            reduce using rule 4 (instruction -> return_instruction .)
    }               reduce using rule 4 (instruction -> return_instruction .)
    ELSE            reduce using rule 4 (instruction -> return_instruction .)


state 5

    (5) instruction -> break_instruction .

    RETURN          reduce using rule 5 (instruction -> break_instruction .)
    BREAK           reduce using rule 5 (instruction -> break_instruction .)
    CONTINUE        reduce using rule 5 (instruction -> break_instruction .)
    PRINT           reduce using rule 5 (instruction -> break_instruction .)
    WHILE           reduce using rule 5 (instruction -> break_instruction .)
    FOR             reduce using rule 5 (instruction -> break_instruction .)
    IF              reduce using rule 5 (instruction -> break_instruction .)
    {               reduce using rule 5 (instruction -> break_instruction .)
    ID              reduce using rule 5 (instruction -> break_instruction .)
    $end            reduce using rule 5 (instruction -> break_instruction .)
    }               reduce using rule 5 (instruction -> break_instruction .)
    ELSE            reduce using rule 5 (instruction -> break_instruction .)


state 6

    (6) instruction -> continue_instruction .

    RETURN          reduce using rule 6 (instruction -> continue_instruction .)
    BREAK           reduce using rule 6 (instruction -> continue_instruction .)
    CONTINUE        reduce using rule 6 (instruction -> continue_instruction .)
    PRINT           reduce using rule 6 (instruction -> continue_instruction .)
    WHILE           reduce using rule 6 (instruction -> continue_instruction .)
    FOR             reduce using rule 6 (instruction -> continue_instruction .)
    IF              reduce using rule 6 (instruction -> continue_instruction .)
    {               reduce using rule 6 (instruction -> continue_instruction .)
    ID              reduce using rule 6 (instruction -> continue_instruction .)
    $end            reduce using rule 6 (instruction -> continue_instruction .)
    }               reduce using rule 6 (instruction -> continue_instruction .)
    ELSE            reduce using rule 6 (instruction -> continue_instruction .)


state 7

    (7) instruction -> print_instruction .

    RETURN          reduce using rule 7 (instruction -> print_instruction .)
    BREAK           reduce using rule 7 (instruction -> print_instruction .)
    CONTINUE        reduce using rule 7 (instruction -> print_instruction .)
    PRINT           reduce using rule 7 (instruction -> print_instruction .)
    WHILE           reduce using rule 7 (instruction -> print_instruction .)
    FOR             reduce using rule 7 (instruction -> print_instruction .)
    IF              reduce using rule 7 (instruction -> print_instruction .)
    {               reduce using rule 7 (instruction -> print_instruction .)
    ID              reduce using rule 7 (instruction -> print_instruction .)
    $end            reduce using rule 7 (instruction -> print_instruction .)
    }               reduce using rule 7 (instruction -> print_instruction .)
    ELSE            reduce using rule 7 (instruction -> print_instruction .)


state 8

    (8) instruction -> while_instruction .

    RETURN          reduce using rule 8 (instruction -> while_instruction .)
    BREAK           reduce using rule 8 (instruction -> while_instruction .)
    CONTINUE        reduce using rule 8 (instruction -> while_instruction .)
    PRINT           reduce using rule 8 (instruction -> while_instruction .)
    WHILE           reduce using rule 8 (instruction -> while_instruction .)
    FOR             reduce using rule 8 (instruction -> while_instruction .)
    IF              reduce using rule 8 (instruction -> while_instruction .)
    {               reduce using rule 8 (instruction -> while_instruction .)
    ID              reduce using rule 8 (instruction -> while_instruction .)
    $end            reduce using rule 8 (instruction -> while_instruction .)
    }               reduce using rule 8 (instruction -> while_instruction .)
    ELSE            reduce using rule 8 (instruction -> while_instruction .)


state 9

    (9) instruction -> for_instruction .

    RETURN          reduce using rule 9 (instruction -> for_instruction .)
    BREAK           reduce using rule 9 (instruction -> for_instruction .)
    CONTINUE        reduce using rule 9 (instruction -> for_instruction .)
    PRINT           reduce using rule 9 (instruction -> for_instruction .)
    WHILE           reduce using rule 9 (instruction -> for_instruction .)
    FOR             reduce using rule 9 (instruction -> for_instruction .)
    IF              reduce using rule 9 (instruction -> for_instruction .)
    {               reduce using rule 9 (instruction -> for_instruction .)
    ID              reduce using rule 9 (instruction -> for_instruction .)
    $end            reduce using rule 9 (instruction -> for_instruction .)
    }               reduce using rule 9 (instruction -> for_instruction .)
    ELSE            reduce using rule 9 (instruction -> for_instruction .)


state 10

    (10) instruction -> if_instruction .

    RETURN          reduce using rule 10 (instruction -> if_instruction .)
    BREAK           reduce using rule 10 (instruction -> if_instruction .)
    CONTINUE        reduce using rule 10 (instruction -> if_instruction .)
    PRINT           reduce using rule 10 (instruction -> if_instruction .)
    WHILE           reduce using rule 10 (instruction -> if_instruction .)
    FOR             reduce using rule 10 (instruction -> if_instruction .)
    IF              reduce using rule 10 (instruction -> if_instruction .)
    {               reduce using rule 10 (instruction -> if_instruction .)
    ID              reduce using rule 10 (instruction -> if_instruction .)
    $end            reduce using rule 10 (instruction -> if_instruction .)
    }               reduce using rule 10 (instruction -> if_instruction .)
    ELSE            reduce using rule 10 (instruction -> if_instruction .)


state 11

    (11) instruction -> assignment_instruction .

    RETURN          reduce using rule 11 (instruction -> assignment_instruction .)
    BREAK           reduce using rule 11 (instruction -> assignment_instruction .)
    CONTINUE        reduce using rule 11 (instruction -> assignment_instruction .)
    PRINT           reduce using rule 11 (instruction -> assignment_instruction .)
    WHILE           reduce using rule 11 (instruction -> assignment_instruction .)
    FOR             reduce using rule 11 (instruction -> assignment_instruction .)
    IF              reduce using rule 11 (instruction -> assignment_instruction .)
    {               reduce using rule 11 (instruction -> assignment_instruction .)
    ID              reduce using rule 11 (instruction -> assignment_instruction .)
    $end            reduce using rule 11 (instruction -> assignment_instruction .)
    }               reduce using rule 11 (instruction -> assignment_instruction .)
    ELSE            reduce using rule 11 (instruction -> assignment_instruction .)


state 12

    (12) instruction -> compound_assignment_instruction .

    RETURN          reduce using rule 12 (instruction -> compound_assignment_instruction .)
    BREAK           reduce using rule 12 (instruction -> compound_assignment_instruction .)
    CONTINUE        reduce using rule 12 (instruction -> compound_assignment_instruction .)
    PRINT           reduce using rule 12 (instruction -> compound_assignment_instruction .)
    WHILE           reduce using rule 12 (instruction -> compound_assignment_instruction .)
    FOR             reduce using rule 12 (instruction -> compound_assignment_instruction .)
    IF              reduce using rule 12 (instruction -> compound_assignment_instruction .)
    {               reduce using rule 12 (instruction -> compound_assignment_instruction .)
    ID              reduce using rule 12 (instruction -> compound_assignment_instruction .)
    $end            reduce using rule 12 (instruction -> compound_assignment_instruction .)
    }               reduce using rule 12 (instruction -> compound_assignment_instruction .)
    ELSE            reduce using rule 12 (instruction -> compound_assignment_instruction .)


state 13

    (13) instruction -> compound_instruction .

    RETURN          reduce using rule 13 (instruction -> compound_instruction .)
    BREAK           reduce using rule 13 (instruction -> compound_instruction .)
    CONTINUE        reduce using rule 13 (instruction -> compound_instruction .)
    PRINT           reduce using rule 13 (instruction -> compound_instruction .)
    WHILE           reduce using rule 13 (instruction -> compound_instruction .)
    FOR             reduce using rule 13 (instruction -> compound_instruction .)
    IF              reduce using rule 13 (instruction -> compound_instruction .)
    {               reduce using rule 13 (instruction -> compound_instruction .)
    ID              reduce using rule 13 (instruction -> compound_instruction .)
    $end            reduce using rule 13 (instruction -> compound_instruction .)
    }               reduce using rule 13 (instruction -> compound_instruction .)
    ELSE            reduce using rule 13 (instruction -> compound_instruction .)


state 14

    (14) return_instruction -> RETURN . expression ;
    (21) expression -> . expression + expression
    (22) expression -> . expression - expression
    (23) expression -> . expression * expression
    (24) expression -> . expression / expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression GREATER expression
    (29) expression -> . expression LESSEQ expression
    (30) expression -> . expression GREATEREQ expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMUL expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . - expression
    (36) expression -> . expression '
    (37) expression -> . ZEROS ( expression )
    (38) expression -> . ONES ( expression )
    (39) expression -> . EYE ( expression )
    (50) expression -> . FLOATNUM
    (51) expression -> . INTNUM
    (52) expression -> . STRING
    (53) expression -> . variable_expression
    (56) expression -> . ( expression )
    (54) variable_expression -> . ID
    (55) variable_expression -> . ID [ expression , expression ]

    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    STRING          shift and go to state 33
    (               shift and go to state 28
    ID              shift and go to state 23

    expression                     shift and go to state 25
    variable_expression            shift and go to state 34

state 15

    (15) break_instruction -> BREAK . ;

    ;               shift and go to state 35


state 16

    (16) continue_instruction -> CONTINUE . ;

    ;               shift and go to state 36


state 17

    (17) print_instruction -> PRINT . expression_list ;
    (18) print_instruction -> PRINT . " expression_list " ;
    (59) expression_list -> . expression_list , expression
    (60) expression_list -> . expression
    (21) expression -> . expression + expression
    (22) expression -> . expression - expression
    (23) expression -> . expression * expression
    (24) expression -> . expression / expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression GREATER expression
    (29) expression -> . expression LESSEQ expression
    (30) expression -> . expression GREATEREQ expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMUL expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . - expression
    (36) expression -> . expression '
    (37) expression -> . ZEROS ( expression )
    (38) expression -> . ONES ( expression )
    (39) expression -> . EYE ( expression )
    (50) expression -> . FLOATNUM
    (51) expression -> . INTNUM
    (52) expression -> . STRING
    (53) expression -> . variable_expression
    (56) expression -> . ( expression )
    (54) variable_expression -> . ID
    (55) variable_expression -> . ID [ expression , expression ]

    "               shift and go to state 38
    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    STRING          shift and go to state 33
    (               shift and go to state 28
    ID              shift and go to state 23

    expression_list                shift and go to state 37
    expression                     shift and go to state 39
    variable_expression            shift and go to state 34

state 18

    (46) while_instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 40


state 19

    (47) for_instruction -> FOR . variable_expression = expression : expression instruction
    (54) variable_expression -> . ID
    (55) variable_expression -> . ID [ expression , expression ]

    ID              shift and go to state 23

    variable_expression            shift and go to state 41

state 20

    (19) assignment_instruction -> variable_expression . = expression ;
    (20) assignment_instruction -> variable_expression . = [ expression_lists ] ;
    (40) compound_assignment_instruction -> variable_expression . ADDASSIGN expression ;
    (41) compound_assignment_instruction -> variable_expression . SUBASSIGN expression ;
    (42) compound_assignment_instruction -> variable_expression . MULASSIGN expression ;
    (43) compound_assignment_instruction -> variable_expression . DIVASSIGN expression ;

    =               shift and go to state 42
    ADDASSIGN       shift and go to state 43
    SUBASSIGN       shift and go to state 44
    MULASSIGN       shift and go to state 45
    DIVASSIGN       shift and go to state 46


state 21

    (44) if_instruction -> IF . ( condition ) instruction
    (45) if_instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 47


state 22

    (48) compound_instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . return_instruction
    (5) instruction -> . break_instruction
    (6) instruction -> . continue_instruction
    (7) instruction -> . print_instruction
    (8) instruction -> . while_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . if_instruction
    (11) instruction -> . assignment_instruction
    (12) instruction -> . compound_assignment_instruction
    (13) instruction -> . compound_instruction
    (14) return_instruction -> . RETURN expression ;
    (15) break_instruction -> . BREAK ;
    (16) continue_instruction -> . CONTINUE ;
    (17) print_instruction -> . PRINT expression_list ;
    (18) print_instruction -> . PRINT " expression_list " ;
    (46) while_instruction -> . WHILE ( condition ) instruction
    (47) for_instruction -> . FOR variable_expression = expression : expression instruction
    (44) if_instruction -> . IF ( condition ) instruction
    (45) if_instruction -> . IF ( condition ) instruction ELSE instruction
    (19) assignment_instruction -> . variable_expression = expression ;
    (20) assignment_instruction -> . variable_expression = [ expression_lists ] ;
    (40) compound_assignment_instruction -> . variable_expression ADDASSIGN expression ;
    (41) compound_assignment_instruction -> . variable_expression SUBASSIGN expression ;
    (42) compound_assignment_instruction -> . variable_expression MULASSIGN expression ;
    (43) compound_assignment_instruction -> . variable_expression DIVASSIGN expression ;
    (48) compound_instruction -> . { instructions }
    (54) variable_expression -> . ID
    (55) variable_expression -> . ID [ expression , expression ]

    RETURN          shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    IF              shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    instructions                   shift and go to state 48
    instruction                    shift and go to state 3
    return_instruction             shift and go to state 4
    break_instruction              shift and go to state 5
    continue_instruction           shift and go to state 6
    print_instruction              shift and go to state 7
    while_instruction              shift and go to state 8
    for_instruction                shift and go to state 9
    if_instruction                 shift and go to state 10
    assignment_instruction         shift and go to state 11
    compound_assignment_instruction shift and go to state 12
    compound_instruction           shift and go to state 13
    variable_expression            shift and go to state 20

state 23

    (54) variable_expression -> ID .
    (55) variable_expression -> ID . [ expression , expression ]
